# xyjson

./: .gitignore  AGENTS.md  CMakeLists.txt  DEVELOPMENT_GUIDE.md  Gemfile  LICENSE  README-en.md  README.md  _config.yml  ai_request.log.md  index.md  makefile  task_log.md  task_todo.md
.claude/: settings.json
.claude/commands/: pop.md  simpop.md
.codebuddy/: settings.json
.codebuddy/commands/: gc.md  pop.md  pop1.md  simpop.md  test.md  tlog.md  todo.md
.github/workflows/: ci.yml  docs-jekyll.yml  docs.yml  perf.yml  release.yml
_layouts/: default.html
changelog/v1.0/: task_log.md  task_todo.md
cmake/: xyjsonConfig.cmake  xyjsonConfigVersion.cmake
docs/: api.md  class_diagram.puml  design.md  fetchcontent_usage.md  github-pages-setup.md  index.md  operator.csv  usage.md  xyjson_operator.md  xyjson_userguide.md
examples/: CMakeLists.txt  README.md  jp_jq.cpp  json_transformer.cpp  struct_map.cpp
include/: xyjson.h
perf/: CMakeLists.txt  README.md  generate_datasets.py  p_access.cpp  p_chained.cpp  p_compare.cpp  p_comparison.cpp  p_iterator.cpp  p_micro.cpp  p_mutable.cpp  p_parse.cpp  perf_common.cpp  perf_common.h
script/: analyze_comments.pl  csv2mdtable.pl  extract_doc_examples.pl  gen_toc.pl  mdtitle_order.pl  mdtitle_update.pl  otable.sh  release_zip.sh  reorder_title.sh  run_perf_compare.sh  stat_perf.pl  sync_doc_examples.pl  tlog.pl  todo.pl  tsv2mdtable.pl  update_par.pl  utable.pl  utable.sh
src/: xyjson.cpp
utest/: CMakeLists.txt  README.md  t_advanced.cpp  t_api.cpp  t_basic.cpp  t_conversion.cpp  t_design.cpp  t_experiment.cpp  t_iterator.cpp  t_mutable.cpp  t_readme.cpp  t_stream.cpp  t_usage.cpp  t_xyjson.cpp
